objects/Fulfillment__c.object
<CustomObject>
    <fields>
        <fullName>Accnumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account number</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add1__c</fullName>
        <description>Address 1(always has the street address in this filed)</description>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add2__c</fullName>
        <description>Address 2 (apt or floor number)</description>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCode__c</fullName>
        <label>Brand Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Correspondence</label>
        <referenceTo>Correspondence__c</referenceTo>
        <relationshipLabel>Fulfillments</relationshipLabel>
        <relationshipName>Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Zip_Code__c</fullName>
        <description>Feed Outbound - Customer Zip Code</description>
        <formula>Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FName__c</fullName>
        <encrypted>true</encrypted>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileExtension__c</fullName>
        <formula>RIGHT( FileName__c , LEN(FileName__c ) - FIND(&quot;.&quot;,FileName__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FileExtension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hcode__c</fullName>
        <formula>0.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Always 0.00</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LName__c</fullName>
        <encrypted>true</encrypted>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Date__c</fullName>
        <formula>Correspondence__r.LetterDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_head__c</fullName>
        <label>Letter head</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MName__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_ID__c</fullName>
        <label>Master ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Suffix__c</fullName>
        <label>Name Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nameprefix__c</fullName>
        <label>Name Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packagecode__c</fullName>
        <label>Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>ST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X0__c</fullName>
        <description>Feed Outbound - Hardcode value &apos;0&apos;</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <description>Feed Outbound - HardCode value &apos;1&apos;</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <description>Feed Outbound - HardCode value &apos;3&apos;</description>
        <formula>3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fulfillment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accnumber__c</columns>
        <columns>Packagecode__c</columns>
        <columns>Letter_head__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>